--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
 		"json5": "2.2.0",
 		"json5-loader": "4.0.1",
 		"jsonld": "5.2.0",
-		"jsrsasign": "8.0.20",
+		"jsrsasign": "^10.2.0",
 		"katex": "0.13.13",
 		"koa": "2.13.1",
 		"koa-bodyparser": "4.3.0",
@@ -216,7 +216,7 @@
 		"systeminformation": "5.8.0",
 		"syuilo-password-strength": "0.0.1",
 		"textarea-caret": "3.1.0",
-		"three": "0.117.1",
+		"three": "^0.125.0",
 		"throttle-debounce": "3.0.1",
 		"tinycolor2": "1.4.2",
 		"tmp": "0.2.1",
